# AIF23_24

./: .replit  README.md  helloworld.py  install.sh  launch.sh  prova_finale.py  pyproject.toml  replit.nix  test.py
