[tool.poetry]
name = "repl-nix-aif2324"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_aif2324"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
